--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^2.4.0
   google_sign_in: ^5.4.2
   shared_preferences: ^2.0.15
+  google_ml_kit: ^0.13.0
+  camera: ^0.10.1
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
