finish insert form boleto and add animateds

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   google_ml_kit: ^0.13.0
   camera: ^0.10.1
   image_picker: ^0.8.6
+  font_awesome_flutter: ^10.3.0
+  flutter_masked_text2: ^0.9.1
+  animated_card: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
